Starting to show Regression tasks on web app.

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
+   "id": "a10c4eff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "from typing import Optional\n",
+    "import re\n",
+    "import os\n",
+    "\n",
+    "for i in range(1, 11):\n",
+    "    path = f\"App/datasets/dataset60_valeri_dnarna_1/runs/run_{i}\"\n",
+    "    # Read the file\n",
+    "    with open(os.path.join(path, \"feature_importance.csv\")) as f:\n",
+    "        lines = f.readlines()\n",
+    "\n",
+    "    features = []\n",
+    "    importances = []\n",
+    "\n",
+    "    for line in lines:\n",
+    "        # Extract the feature name between the first '(' and ')'\n",
+    "        feature_match = re.search(r'Feature\\s*\\((.*?)\\)', line)\n",
+    "        # Extract importance: number inside the last parentheses\n",
+    "        importance_match = re.search(r'\\(([-+]?[0-9]*\\.?[0-9]+)\\)\\s*$', line)\n",
+    "\n",
+    "        if feature_match and importance_match:\n",
+    "            features.append(feature_match.group(1))\n",
+    "            importances.append(float(importance_match.group(1)))\n",
+    "\n",
+    "    df = pd.DataFrame({\n",
+    "        \"Feature\": features,\n",
+    "        \"Importance\": importances\n",
+    "    })\n",
+    "\n",
+    "    df.to_csv(os.path.join(path, \"feature_importance.csv\"), sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "225ea311",
    "metadata": {},
    "outputs": [
@@ -228,14 +270,6 @@
     }
    ],
    "source": [
-    "import polars as pl\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import math\n",
-    "from typing import Optional\n",
-    "import re\n",
-    "import os\n",
-    "\n",
     "def calculate_metrics_from_confusion_matrix(matrix_path):\n",
     "    \"\"\"\n",
     "    Calculates ACC, Sn, Sp, F1, and MCC from a binary confusion matrix CSV.\n",
