Optimized models. Need to confirm if all models look the same.

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,103 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "80d6a919",
+   "metadata": {},
+   "source": [
+    "To remove train_imbalance\n",
+    "To add imputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a9812069",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['train', 'train_labels', 'column_train', 'label_encoder', 'ordinal_encoder', 'scaler', 'clf', 'cross_validation', 'confusion_matrix', 'nameseq_train', 'feature_importance', 'train_stats'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import joblib\n",
+    "import numpy as np\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "def find_trained_models(base_path):\n",
+    "\n",
+    "    for root, dirs, files in os.walk(base_path):\n",
+    "        if \"trained_model.sav\" in files:\n",
+    "            model = joblib.load(os.path.join(root, \"trained_model.sav\"))\n",
+    "            print(model.keys())\n",
+    "            break\n",
+    "            # features = model[\"train\"]\n",
+    "\n",
+    "            # missing = features.isnull().values.any()\n",
+    "            # inf = features.isin([np.inf, -np.inf]).values.any()\n",
+    "            # if missing or inf:\n",
+    "            #     features.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "            #     imp = SimpleImputer(strategy='mean')\n",
+    "            #     model[\"imputer\"] = imp.fit(features)\n",
+    "\n",
+    "            #     joblib.dump(model, os.path.join(root, \"trained_model.sav\"))\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    datasets_path = \"App/datasets\"\n",
+    "    find_trained_models(datasets_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "335cdf09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['train', 'train_labels', 'column_train', 'label_encoder', 'ordinal_encoder', 'scaler', 'clf', 'cross_validation', 'confusion_matrix', 'nameseq_train', 'feature_importance', 'train_stats'])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "model = joblib.load(\"App/datasets/dataset1_liu_protein_0/runs/run_6/trained_model.sav\")\n",
+    "model.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cf23fb43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['test.sav']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model, \"test.sav\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "a10c4eff",
