Tested all user options

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a9812069",
    "metadata": {},
    "outputs": [
@@ -19,14 +19,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "App/datasets/dataset24_li_protein_0/runs/run_6\n",
-      "App/datasets/dataset39_wei_protein_0/runs/run_6\n"
+      "App/datasets/dataset24_li_protein_0/runs/run_6\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "App/datasets/dataset39_wei_protein_0/runs/run_6\n",
       "App/datasets/dataset10_charoenkwan_protein_0/runs/run_6\n",
       "App/datasets/dataset11_charoenkwan_protein_0/runs/run_6\n",
       "App/datasets/dataset12_chung_protein_0/runs/run_6\n",
@@ -102,11 +102,7 @@
     "            print(root)\n",
     "            model = joblib.load(os.path.join(root, \"trained_model.sav\"))\n",
     "            \n",
-    "            model[\"cross_validation\"] = pd.read_csv(os.path.join(root, \"training_kfold(10)_metrics.csv\"))\n",
-    "\n",
-    "            os.rename(os.path.join(root, \"feature_importance.csv\"), os.path.join(root, \"feature_importance.tsv\"))\n",
-    "\n",
-    "            model[\"feature_importance\"] = pd.read_csv(os.path.join(root, \"feature_importance.tsv\"), sep='\\t')\n",
+    "            model[\"descriptors\"] = pd.read_csv(os.path.join(root, \"best_descriptors/selected_descriptors.csv\"))\n",
     "\n",
     "            joblib.dump(model, os.path.join(root, \"trained_model.sav\"))\n",
     "            # features = model[\"tra0000000000000000in\"]\n",
@@ -127,17 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "335cdf09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['train', 'train_labels', 'column_train', 'imputer', 'scaler', 'clf', 'feature_importance', 'nameseq_train', 'train_stats'])"
+       "dict_keys(['train', 'train_labels', 'column_train', 'label_encoder', 'ordinal_encoder', 'scaler', 'clf', 'cross_validation', 'confusion_matrix', 'nameseq_train', 'feature_importance', 'train_stats', 'descriptors'])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,114 +141,31 @@
    "source": [
     "import joblib\n",
     "\n",
-    "model = joblib.load(\"App/datasets/dataset58_liu_protein_1/runs/run_6/trained_model.sav\")\n",
+    "model = joblib.load(\"App/datasets/dataset57_bonidia_dnarna_0/runs/run_6/trained_model.sav\")\n",
     "model.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "00206b73",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>1. Feature (Integer_Fourier_19): (114.000000)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2. Feature (Integer_Fourier_4): (108.000000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3. Feature (Integer_Fourier_15): (84.000000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4. Feature (Integer_Fourier_2): (80.000000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5. Feature (Integer_Fourier_18): (79.000000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6. Feature (Integer_Fourier_9): (77.000000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3609</th>\n",
-       "      <td>3611. Feature (NT.gap3): (0.000000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3610</th>\n",
-       "      <td>3612. Feature (TT): (0.000000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3611</th>\n",
-       "      <td>3613. Feature (NW.gap3): (0.000000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3612</th>\n",
-       "      <td>3614. Feature (NY.gap3): (0.000000)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3613</th>\n",
-       "      <td>3615. Feature (KM.gap4): (0.000000)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3614 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     1. Feature (Integer_Fourier_19): (114.000000)\n",
-       "0     2. Feature (Integer_Fourier_4): (108.000000)\n",
-       "1     3. Feature (Integer_Fourier_15): (84.000000)\n",
-       "2      4. Feature (Integer_Fourier_2): (80.000000)\n",
-       "3     5. Feature (Integer_Fourier_18): (79.000000)\n",
-       "4      6. Feature (Integer_Fourier_9): (77.000000)\n",
-       "...                                            ...\n",
-       "3609           3611. Feature (NT.gap3): (0.000000)\n",
-       "3610                3612. Feature (TT): (0.000000)\n",
-       "3611           3613. Feature (NW.gap3): (0.000000)\n",
-       "3612           3614. Feature (NY.gap3): (0.000000)\n",
-       "3613           3615. Feature (KM.gap4): (0.000000)\n",
-       "\n",
-       "[3614 rows x 1 columns]"
+       "Index(['NAC', 'DNC', 'TNC', 'kGap_di', 'kGap_tri', 'ORF', 'Fickett', 'Shannon',\n",
+       "       'FourierBinary', 'FourierComplex', 'Tsallis', 'repDNA'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model[\"feature_importance\"]"
+    "model[\"descriptors\"].columns"
    ]
   },
   {
