--- a/experiments_analysis.ipynb
+++ b/experiments_analysis.ipynb
@@ -1,46 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "1015e1ba",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['dict_nt.pkl']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import joblib\n",
-    "\n",
-    "descriptors = {'NAC': list(range(0, 4)), 'DNC': list(range(4, 20)),\n",
-    "                'TNC': list(range(20, 84)), 'kGap_di': list(range(84, 148)),\n",
-    "                'kGap_tri': list(range(148, 404)), 'ORF': list(range(404, 414)),\n",
-    "                'Fickett': list(range(414, 416)), 'Shannon': list(range(416, 421)),\n",
-    "                'FourierBinary': list(range(421, 440)), 'FourierComplex': list(range(440, 459)),\n",
-    "                'Tsallis': list(range(459, 464)), 'repDNA': list(range(464, 734))}\n",
-    "\n",
-    "df_protein = pd.read_csv(\"App/jobs/43ca5fea-255d-4955-817a-d4719093b2c9/feat_extraction/ftrain.csv\")\n",
-    "\n",
-    "dict_features = {}\n",
-    "\n",
-    "for descriptor in descriptors:  \n",
-    "    list_features = list(df_protein.iloc[:, descriptors[descriptor]].columns)\n",
-    "    for feature in list_features:\n",
-    "        dict_features[feature] = f\"{feature} ({descriptor})\"\n",
-    "\n",
-    "joblib.dump(dict_features, \"dict_nt.pkl\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "80d6a919",
    "metadata": {},
@@ -51,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a9812069",
    "metadata": {},
    "outputs": [
@@ -59,13 +19,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      class  num_seqs  min_length  max_length  avg_length  std_length  \\\n",
-      "0  negative       250          30         639  248.716000  130.363321   \n",
-      "1  positive       146          26         620  145.506849   99.196446   \n",
-      "\n",
-      "   sum_length      Q1     Q2      Q3  N50  \n",
-      "0       62179  141.25  227.0  323.75  309  \n",
-      "1       21244   72.25  121.5  189.00  186  \n"
+      "positive: 15804, negative: 33649, multiclass: 5208, regression: 0\n",
+      "(3, 8)\n"
      ]
     }
    ],
@@ -77,13 +32,28 @@
     "import pandas as pd\n",
     "\n",
     "def find_trained_models(base_path):\n",
+    "    positive, negative, multiclass, regression = 0, 0, 0, 0\n",
+    "    num_mc = []\n",
     "\n",
     "    for root, dirs, files in os.walk(base_path):\n",
-    "        if \"train_stats.csv\" in files:\n",
-    "            df_train = pd.read_csv(os.path.join(root, \"train_stats.csv\"))\n",
+    "        if \"test_stats.csv\" in files:\n",
+    "            df_test = pd.read_csv(os.path.join(root, \"test_stats.csv\"))\n",
     "\n",
-    "            print(df_train)\n",
-    "            break\n",
+    "            labels = df_test[\"class\"].to_list()\n",
+    "\n",
+    "            for label in labels:\n",
+    "\n",
+    "                if label == \"positive\":\n",
+    "                    positive += df_test[df_test[\"class\"] == label][\"num_seqs\"].item()\n",
+    "                elif label == \"negative\":\n",
+    "                    negative += df_test[df_test[\"class\"] == label][\"num_seqs\"].item()\n",
+    "                else:\n",
+    "                    if len(df_test[\"class\"].to_list()) > 2:\n",
+    "                        multiclass += df_test[df_test[\"class\"] == label][\"num_seqs\"].item()\n",
+    "                        num_mc.append(len(df_test[\"class\"].to_list()))\n",
+    "\n",
+    "    print(f\"positive: {positive}, negative: {negative}, multiclass: {multiclass}, regression: {regression}\")\n",
+    "    print(f\"{min(num_mc), max(num_mc)}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    datasets_path = \"App/datasets\"\n",
